# apply-smith-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
data/capability_roadmaps/: _example_ab_testing.md  _example_sql_analytics.md
data/company_dossiers/: README.md  _example_company.md
data/external_signals/: README.md
data/industry_maps/: _example_finance.md  _example_internet_platform.md  _example_new_energy.md
data/question_bank/: _example_role_questions.md
data/role_schemas/: _example_ad_ops.md  _example_data_analyst.md  _example_user_ops.md
src/applysmith/: __init__.py  atom_parser.py  claim_checker.py  company_dossier.py  config.py  experience_matcher.py  gap_builder.py  ideal_candidate.py  interview_defense.py  jd_analyzer.py  llm_client.py  metric_extractor.py  metric_validator.py  models.py  onboarding.py  package_generator.py  paths.py  resume_generator.py  strategy_board.py  templates.py  tracker.py
src/applysmith/cli/: __init__.py  analysis.py  generation.py  scaffold.py  signals.py  tracker.py
src/applysmith/prompts/: __init__.py  claim_check.py  experience_match.py  gap_builder.py  ideal_candidate.py  interview_defense.py  jd_analysis.py  resume_gen.py
tests/: test_atom_parser.py  test_company_dossier.py  test_import.py  test_integration.py  test_jd_analyzer.py  test_json_repair.py  test_onboarding.py  test_package_generator.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
