[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "applysmith"
version = "0.1.0"
description = "A local Career Strategy OS for job seekers"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
applysmith = "applysmith.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/applysmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: real API calls to DeepSeek (run with '-m integration')",
]
